--- a/analysis/CompareWithGreenup.Rmd
+++ b/analysis/CompareWithGreenup.Rmd
@@ -23,7 +23,8 @@ orthoPath <- "/mnt/NOBACKUP/mariansc/share/orthos"
 #####
 # Input data (from the Greenup study)
 blastOutFile <- "~/GRewd/pipeline/indata/genesOfInterrest2/COR_genes_VS_allProteomes.blastx"
-annotTblFile <- "~/GRewd/pipeline/indata/genesOfInterrest2/TableS10.txt"
+# annotTblFile <- "~/GRewd/pipeline/indata/genesOfInterrest2/TableS10.txt"
+annotTblFile <- "~/GRewd/pipeline/indata/genesOfInterrest2/TableS10_Marian_mod.txt"
 
 # load annotation table
 annotTbl <- read.table(annotTblFile,sep="\t",header=T,stringsAsFactors = F,dec = ",")
@@ -103,7 +104,7 @@ seqIDmat <- sub("^.+\\|","",seqIDmat)
 Heatmap of peak log fold-change. Grey means not significant (padj>0.05 or |lfc|<1). White means no ortholog sequence found in orthogroup.
 
 
-```{r heatmapAll, echo=FALSE,dev='svg'}
+```{r heatmapAll, echo=FALSE,dev='svg',fig.height=7,fig.width=7}
 
 
 sapply( c("BrDi","HoVu","MeNu1","StLa","NaSt"), function(spc){
@@ -117,9 +118,11 @@ sapply( c("BrDi","HoVu","MeNu1","StLa","NaSt"), function(spc){
 padjMat[is.na(padjMat)] <- 1
 sigMat <- lfcMat*as.numeric(padjMat<0.05)
 
-# rownames(statMat) <- Hv_bres$grpID
-# rownames(lfcMat) <- Hv_bres$grpID
-rownames(sigMat) <- annotTbl$Annotation[ match(Hv_bres$qseqid,annotTbl$Contig) ]
+# rownames(sigMat) <- annotTbl$Annotation[ match(Hv_bres$qseqid,annotTbl$Contig) ]
+
+# annotTbl$inPlot <- annotTbl$Contig %in% Hv_bres$qseqid
+
+rownames(sigMat) <- annotTbl$alt_annotation[ match(Hv_bres$qseqid,annotTbl$Contig) ]
 fc <- annotTbl$Dicktoo_Chill_logFC[ match(Hv_bres$qseqid,annotTbl$Contig) ]
 # FCcols <- as.character( cut(fc,breaks=c(-20,seq(-5.5,5.5,by=1),20),
 #                             labels=colorRampPalette(c("blue","lightgrey","red"))(13) ) )
@@ -134,11 +137,33 @@ idxOrder <- order(fc)
 
 m <- sigMat[idxOrder, c(2,1,3:5)]
 colnames(m) <- c("Hordeum","Brachypodium","Melica","Stipa","Nardus")
-heatmap(m, breaks=c(-20,-4:-1,1:4,20),cexRow = 1.5,
+
+
+heatmap(m, breaks=c(-20,-4:-1,1:4,20),cexRow = 1.2,
         col=colorRampPalette(c("blue","lightgrey","red"))(9),
-        RowSideColors=FCcols[idxOrder], margins=c(9,30),
+        RowSideColors=FCcols[idxOrder], margins=c(10,40),
         scale="none", Rowv = NA, Colv = NA, main="Peak fold change of Greenup genes")
+
+# to file
+svg(filename = "~/GRewd/pipeline/articleFigures/compareGreenupHeatmap.svg",width = 7,height = 7)
+heatmap(m, breaks=c(-20,-4:-1,1:4,20),cexRow = 1.2,
+        col=colorRampPalette(c("blue","lightgrey","red"))(9),
+        RowSideColors=FCcols[idxOrder], margins=c(10,40),
+        scale="none", Rowv = NA, Colv = NA, main="Peak fold change of Greenup genes")
+invisible(dev.off())
+
 ```
+
+```{r colorLegend, echo=FALSE}
+# # color legend:
+#
+svg(filename = "~/GRewd/pipeline/articleFigures/compareGreenupHeatmap_colorLegend.svg",width = 3,height = 2)
+image(x=-5:5,z=matrix(-4.5:4.5,ncol = 1), xlab="log2(fold change)",xaxt = "n", yaxt="n",
+     breaks=c(-20,-4:-1,1:4,20),col=colorRampPalette(c("blue","lightgrey","red"))(9))
+axis(1,at = c(-4,-2,0,2,4))
+invisible(dev.off())
+```
+
 
 ### Significance test
 
