--- a/analysis/ValidateWithGreenup.Rmd
+++ b/analysis/ValidateWithGreenup.Rmd
@@ -15,6 +15,7 @@ library(phangorn)
 library(stringr)
 
 source("~/GRewd/pipeline/R/orthoGrpTools.R")
+source("~/GRewd/pipeline/R/myFastaTools.R")
 ```
 
 
@@ -26,6 +27,7 @@ orthoPath <- "/mnt/NOBACKUP/mariansc/share/orthos"
 # Input data (from the Greenup study)
 blastOutFile <- "~/GRewd/pipeline/indata/genesOfInterrest2/COR_genes_VS_allProteomes.blastx"
 annotTblFile <- "~/GRewd/pipeline/indata/genesOfInterrest2/TableS10.txt"
+fastaFile <- "~/GRewd/pipeline/indata/genesOfInterrest2/COR_genes_S10.fasta"
 
 # load annotation table
 annotTbl <- read.table(annotTblFile,sep="\t",header=T,stringsAsFactors = F,dec = ",")
@@ -37,6 +39,9 @@ bres <- read.table(blastOutFile, stringsAsFactors = F,
                                  "sstart", "send", "evalue", "bitscore"))
 
 
+
+# load fasta file
+seqs <- readFasta(inFastaFile = fastaFile)
 
 # load groups
 grpsTbl <- loadOrthoGrpsTable(orthoGrpFile = file.path(orthoPath,"orthoMCL/groups.txt"))
@@ -54,6 +59,15 @@ DEmat <- readRDS("~/GRewd/pipeline/data/DEmat.RDS") # from: superGeneModel.Rmd
 
 # grpIDs included the superGeneModel.Rmd:
 superGoodGrpIDs <- rownames(DEmat$peak$pVal)
+```
+
+```{r lolium, echo=FALSE, eval=FALSE}
+# load lolium data
+loliumVSD <- read.table("~/GRewd/pipeline/indata/LoliumVSD/Fal_leaf_DE_VSD.txt",header=T,sep="\t",row.names = 1)
+
+# convert lolium sequence ID's
+loliumVSDseqIDs <- sub("comp([0-9]+)_c([0-9]+)_seq([0-9]+)","f\\1_c\\2s\\3",rownames(loliumVSD),perl=T)
+
 ```
 
 
@@ -84,6 +98,15 @@ tbl$grpIDgood <- bres$grpIDgood[bresSub][idx]
 tbl$grpIDsuperGood <- ifelse(tbl$grpIDgood %in% superGoodGrpIDs, tbl$grpIDgood, NA)
 
 tbl$Annotation <- annotTbl$Annotation
+
+# # add lolium column
+# grpID=tbl$grpID[3]
+# tbl$DEinLolium <- sapply(tbl$grpID, function(grpID) {
+#   if( !is.na(grpID))
+#     any(unlist(grps[grpID,"LoPeF"]) %in% loliumVSDseqIDs)
+#   else
+#     NA
+# })
 
 DT::datatable(tbl, class="compact stripe",options = list(pageLength=100),rownames = F)
 ```
@@ -206,6 +229,84 @@ abline(v=min(rank(results(ddsPeak)$stat)[results(ddsPeak)$padj<0.05],na.rm = T)/
 abline(h=min(rank(results(ddsTime)$stat)[results(ddsTime)$padj<0.05],na.rm = T)/len)
 ```
 
+### Heatmap with best hit
+
+Find best match to Hv_R for each query sequence. If several query sequences matches same Hv_R sequence, only use best hit. Match query sequence to each of the de-novo species and pick only the best hits that are in the same grpID as the Hv_R match. Heatmap of peak log fold-change.
+
+
+```{r heatmapAll}
+# use the grps in tbl.. 
+# If split group exists then that can be used
+# Check that there is a hit in Hv_R
+
+# get blast hits for this spc with grpID
+Hv_bres <- bres[ grepl("Hv_R",bres$sseqid) & !is.na(bres$grpID), ]
+# Keep only best hits per query
+Hv_bres <- Hv_bres[match(unique(Hv_bres$qseqid),Hv_bres$qseqid), ]
+
+# # sort on sseqid and bitscore
+# Hv_bres <- Hv_bres[order( Hv_bres$sseqid, Hv_bres$bitscore, decreasing=T), ]
+# # Select only best hit per Hv_R sequence
+# Hv_bres <- Hv_bres[match(unique(Hv_bres$sseqid),Hv_bres$sseqid),]
+
+
+# sort on grpID and bitscore
+Hv_bres <- Hv_bres[order( Hv_bres$grpID, Hv_bres$bitscore, decreasing=T), ]
+# Select only best hit per Hv_R sequence
+Hv_bres <- Hv_bres[match(unique(Hv_bres$grpID),Hv_bres$grpID),]
+
+# For each species. find best hit per query sequence 
+sapply( c("BrDi","HoVu","MeNu1","StLa","NaSt"), function(spc){
+  
+  # get blast hits for this spc with grpID
+  spcBres <- bres[ grepl(spc,bres$sseqid) & !is.na(bres$grpID), ]
+  # only those that are also in Hv_R
+  spcBres <- spcBres[spcBres$qseqid %in% Hv_bres$qseqid, ]
+  
+  # select only those that have qseq/grpID as in Hv_bres
+  Hv_idx <- match(spcBres$qseqid,Hv_bres$qseqid)
+  hasSameGrp <- spcBres$grpID == Hv_bres$grpID[Hv_idx]
+
+  spcBres <- spcBres[ hasSameGrp, ]
+
+  # Keep only best hits (paralog?) per query
+  spcBres <- spcBres[match(Hv_bres$qseqid,spcBres$qseqid), ]
+  
+  return(spcBres$sseqid)
+}) -> seqIDmat
+
+allNA <- apply(is.na(seqIDmat),1,all)
+Hv_bres <- Hv_bres[!allNA,]
+seqIDmat <- seqIDmat[!allNA, ]
+
+
+# sapply( c("BrDi","HoVu","MeNu1","StLa","NaSt"), function(spc){
+#   DE[[spc]]$resRamp$stat[match(sub("[^|]*\\|","",seqIDmat[,spc]), rownames(DE[[spc]]$resRamp))]
+# }) -> statMat
+
+sapply( c("BrDi","HoVu","MeNu1","StLa","NaSt"), function(spc){
+  DE[[spc]]$resRamp$log2FoldChange[match(sub("[^|]*\\|","",seqIDmat[,spc]), rownames(DE[[spc]]$resRamp))]
+}) -> lfcMat
+
+
+# rownames(statMat) <- Hv_bres$grpID
+# rownames(lfcMat) <- Hv_bres$grpID
+rownames(lfcMat) <- tbl$Annotation[ match(Hv_bres$qseqid,tbl$qseq) ]
+fc <- tbl$Chill_logFC[ match(Hv_bres$qseqid,tbl$qseq) ]
+FCcols <- as.character( cut(fc,breaks=c(-20,seq(-5.5,5.5,by=1),20),
+                            labels=colorRampPalette(c("blue","white","red"))(13) ) )
+idxOrder <- order(fc)
+# heatmap(statMat[idxOrder, ], breaks=c(-20,seq(-5.5,5.5,by=1),20),
+#         col=colorRampPalette(c("green","black","red"))(13),
+#         RowSideColors=FCcols[idxOrder],
+#         scale="none", Rowv = NA, Colv = NA, main="Peak stat of Barley LTI genes")
+
+heatmap(lfcMat[idxOrder, c(2,1,3:5)], breaks=c(-20,seq(-5.5,5.5,by=1),20),cexRow = 1.5,
+        col=colorRampPalette(c("blue","lightgrey","red"))(13),
+        RowSideColors=FCcols[idxOrder], margins=c(5,30),
+        scale="none", Rowv = NA, Colv = NA, main="Peak fold change of Greenup genes")
+plot(NULL)
+```
 
 
 ```{r plotAll, echo=FALSE, fig.height=7,fig.width=7}
